[package]
name = "alt-tls"
version = "0.1.0"
description = "TLS providers for rustls that support modern alternates"
authors = [ "Mike Dilger <mike@mikedilger.com>" ]
readme = "README.md"
repository = "https://github.com/mikedilger/alt-tls"
license = "MIT"
keywords = [ "tls", "rustls", "ed25519" ]
edition = "2024"

[features]
default = ["std"]
std = [ "rustls/std", "ed25519-dalek/std", "blake3/std", "hpke-rs/std", "hpke-rs-crypto/std" ]

[dependencies]
blake3 = { version = "1.7", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false, features = [ "pkcs8", "pem", "rand_core" ] }
hex = "0.4"
hmac = "0.12"
hpke-rs = "0.2"
hpke-rs-crypto = "0.2"
hpke-rs-rust-crypto = "0.2"
pkcs8 = "0.10"
rand_core = { version = "0.6", features = [ "getrandom" ] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["logging", "tls12"] }
sec1 = { version = "0.7", default-features = false, features = ["pkcs8", "pem"] }
sha2 = { version = "0.10", default-features = false }
x25519-dalek = "2"

[dev-dependencies]
env_logger = "0.11"
